# szu-sports-booking

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  PROJECT_INDEX.md  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml  test_api_flow.py
.agents/skills/szu-sports-booking/: .env.example  .gitignore  SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: agent_task.md
.github/workflows/: test.yml
configs/: .env.example  config.yaml
docs/: ARCHITECTURE.md  CONFIG.md  DEVELOPMENT.md  ERRORS.md
examples/: README.md  dry_run_booking.py
scripts/: _book_tomorrow.py  _verify_tomorrow.py  check_repo.py
src/booking/: __init__.py  account.py  chain_builder.py  cli.py  cli_output.py  client.py  config.py  database.py  errors.py  pool.py  retry.py  step_builder.py
surf-proxy/: go.mod  go.sum  main.go
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_integration.py
tests/smoke/: __init__.py  test_infra_backends.py  test_smoke.py
tests/unit/: test_account.py  test_browser.py  test_campus_page.py  test_chain_builder.py  test_cli.py  test_client.py  test_config.py  test_confirm_page.py  test_database.py  test_errors.py  test_escape_hatch.py  test_logger.py  test_login_page.py  test_matchers.py  test_metrics.py  test_plan.py  test_pool.py  test_rate_limiter.py  test_render_log_html.py  test_report_generator.py  test_retry.py  test_risk_scorer.py  test_router.py  test_run_manager.py  test_selectors.py  test_sport_page.py  test_step_builder.py  test_step_tracker.py  test_trace_viewer.py  test_tracer.py
(+52 files in other folders)
